--- a/queryraiserapp/templates/technicianallcomplaints.html
+++ b/queryraiserapp/templates/technicianallcomplaints.html
@@ -53,12 +53,12 @@
     <div class="main-container">
         <nav class="sidebar">
             <ul>
-                <li><a class="nav-link active" href="{% url 'techniciandashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
+                <li><a class="nav-link" href="{% url 'techniciandashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
                     <line x1="12" y1="20" x2="12" y2="10"></line>
                     <line x1="18" y1="20" x2="18" y2="4"></line>
                     <line x1="6" y1="20" x2="6" y2="16"></line>
                   </svg>Dashboard</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{% url 'technician_all_complaints_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                  <li class="nav-item"><a class="nav-link active" href="{% url 'technician_all_complaints_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
                     <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
                   </svg>All Complaints</a></li>
                   <li class="nav-item has-submenu">
@@ -118,71 +118,10 @@
         <main class="content"> 
             <div class="subnav d-flex justify-content-between align-items-center"> 
                 <div>
-                    {% if technician_name %}
-                    <h3>Welcome {{technician_name}}</h3>
-                    {% else %}
-                    <h3>Welcome</h3>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="tablelist quickstatslist" >
-               
-                <div class="table-container" id="quickstatstable-container">
-                    <table id="quickstatstable" class="tables">
-                        <thead>
-                            <tr>
-                                <th style="border: 1px solid #007bff;background-color: #cce5ff;">
-                                   <span>Assigned Complaints</span> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-                                  </svg>
-                                </th>
-                                <th style="border: 1px solid #28a745;  background-color: #d4edda;">
-                                    
-                                    <span>
-                                        Resolved Complaints
-                                    </span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
-                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                                        <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
-                                      </svg>
-                                
-                                </th>
-                                <th style="border: 1px solid #ffc107;background-color: #fff3cd;">
-                                    
-                                        <span>
-                                            Pending Complaints
-                                        </span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
-                                            <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
-                                            <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
-                                            <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
-                                          </svg>
-                                    
-                                </th>
-                                <th style="border: 1px solid #dc3545; background-color: #f8d7da; ">
-                                    <span>Closed Complaints</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <rect x="3" y="11" width="18" height="10" rx="2" ry="2" />
-                                        <path d="M7 11V7a5 5 0 0 1 10 0v4" />
-                                      </svg>
-                                </th> 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="complaintstatus">
-                <h3>Complaint Status Overview</h3>
-                <div class="complaintstatusgraph">
-                    <canvas id="complaintPieChart"></canvas> 
-                    <canvas id="complaintBarChart"></canvas> 
+                    <h3>All Complaints</h3>
                 </div>
             </div>
             <div class="recentcomplainttable">
-                <h3>Recent Complaints</h3>
                 <div class="tablelist">
                
                     <div class="table-container">
@@ -190,26 +129,20 @@
                             <thead>
                                 <tr>
                                     <th>Complaint ID</th>
+                                    <th>Issue Type</th>
                                     <th>Date Raised</th>
                                     <th>Faculty Name</th>
+                                    <th>Faculty Number</th>
                                     <th>Department</th>
-                                    <th>Issue Type</th>
                                     <th>Status</th>
-                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 </tbody>
                         </table>
                     </div>
-                    <a href="" style="font-size: 13px;color: #007bff;display: flex;align-items: center;gap: 5px;" id="viewall">View all <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
-                      </svg></a>
+
                 </div>
-            </div>
-            <div class="performance">
-                <h3>Performance Metrics</h3>
-                <div class="performancegraphs"></div>
             </div>
         </main> 
         <footer class="footer position-absolute">
@@ -237,83 +170,8 @@
         </script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script>
-        function getcomplaintscount() {
-        fetch('/techniciancomplaintcount/', {
-            method: 'POST',
-            headers: {
-                'X-CSRFToken': getCookie('csrftoken'),
-                'Content-Type': 'application/json'
-            }
-        })
-        .then(response => response.json()) 
-        .then(data => {
-            console.log(data);
-
-            const quickstatsTableBody = document.querySelector('#quickstatstable tbody');
-            quickstatsTableBody.innerHTML = '';
-
-            if (data.success) { 
-                const complaintCounts = data.complaint_counts;
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td style="color:#fd7e14;">${complaintCounts.assigned}</td> 
-                    <td style="color:#28a745;">${complaintCounts.resolved}</td>
-                    <td style="color:#dc3545;">${complaintCounts.pending_review}</td> 
-                    <td style="color:#6f42c1;">${complaintCounts.closed}</td> 
-                `;
-                quickstatsTableBody.appendChild(row); 
-                const chartLabels = Object.keys(complaintCounts);
-                const chartData = Object.values(complaintCounts);
-
-                const pieChartCanvas = document.getElementById('complaintPieChart').getContext('2d');
-                new Chart(pieChartCanvas, {
-                    type: 'pie',
-                    data: {
-                        labels: chartLabels,
-                        datasets: [{
-                            label: 'Complaint Status',
-                            data: chartData,
-                            backgroundColor: [
-                                '#007bff', 
-                                '#fd7e14',
-                                '#28a745', 
-                                '#ffc107', 
-                                '#dc3545', 
-                                '#6f42c1'  
-                            ],
-                        }]
-                    },
-                });
-
-            const barChartCanvas = document.getElementById('complaintBarChart').getContext('2d');
-            new Chart(barChartCanvas, {
-                type: 'bar',
-                data: {
-                    labels: chartLabels,
-                    datasets: [{
-                        label: 'Complaint Status',
-                        data: chartData,
-                        backgroundColor: [
-                            '#007bff', 
-                            '#fd7e14', 
-                            '#28a745', 
-                            '#ffc107', 
-                            '#dc3545',
-                            '#6f42c1' 
-                        ],
-                    }]
-                },
-            });
-            } else {
-                console.error('Error fetching Complaints count:', data.error);
-            }
-        })
-        .catch(error => {
-            console.error('Error fetching Complaints count:', error);
-        });
-    }
-    function getrecentcomplaints(){
-        fetch('/technicianrecentcomplaints/',{
+    function getallcomplaints(){
+        fetch('/technician_all_complaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -335,13 +193,12 @@
                     const row = document.createElement('tr');
                     row.innerHTML = `
                         <td style="color:#007bff;">${complaint.id}</td> 
+                        <td style="color:#000;font-weight:590;">${complaint.title}</td> 
                         <td>${complaint.created_at}</td> 
                         <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
+                        <td style="color:#000;font-weight:590;">${complaint.faculty__faculty_phonenumber}</td>
                         <td style="color:#525b75;">${complaint.department__department_name}</td>
-                        <td style="color:#525b75;">${complaint.status}</td>
-                        <td style="color:#000;font-weight:590;">${complaint.title}</td> 
-                        
-                        <td></td>                    
+                        <td style="color:#525b75;">${complaint.status}</td>                   
                     `;
                     recentcomplaintTableBody.appendChild(row);
                 });
@@ -352,8 +209,7 @@
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getcomplaintscount();
-        getrecentcomplaints();
+        getallcomplaints();
     });
     function getCookie(name) {
         let cookieValue = null;
