--- a/static/css/facultystyles.css
+++ b/static/css/facultystyles.css
@@ -244,3 +244,15 @@ textarea {
     content: "*"; 
     color: #ee4d5d; 
   }
+  .save-button{
+    padding: 8px 12px;
+    cursor: pointer;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+.save-button:hover {
+    background-color: #0056b3;
+}
