--- a/static/css/pannelstyles.css
+++ b/static/css/pannelstyles.css
@@ -13,7 +13,7 @@ body {
 header {
     width: 100%;
     background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     border-bottom: 1px solid #cbd0dd;
 }
 
@@ -417,4 +417,35 @@ footer a:hover{
 }
 .position-absolute {
     position: absolute !important;
+}
+.save-button{
+    padding: 8px 12px;
+    cursor: pointer;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+.save-button:hover {
+    background-color: #0056b3;
+}
+#addbranchesbutton {
+    background-color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #3874ff;
+    color: white;
+    font-size: 12px;
+    font-weight: 400;
+}
+#addbranchesbutton svg{
+    margin-right: 5px;
+}
+#addbranchesbutton:hover{
+    background-color: #004dff;
 }
